--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
     padding: 32px;
     border: solid 1px red;
 }
+.headerbutton {
+    background-color: #3882F6;
+    color: white;
+    padding: 12px;
+    border-radius: 10px;
+}
 .heroheader {
     background-color: #1f2937;
     border: solid 1px greenyellow;
